# plasma-widget-quick-controls

./: CMakeLists.txt  INSTALL  README.md
image/breeze/status/22/: .directory
plasmoid/: metadata.desktop
plasmoid/contents/ui/: .SidePanel.qml.kate-swp  AppearancePanel.qml  CompactRepresentation.qml  ControlsPanel.qml  CustomComboBoxStyle.qml  FullRepresentation.qml  SidePanel.qml  main.qml
plasmoid/contents/ui/Bluetooth/: BluetoothPanel.qml  DeviceItem.qml  Header.qml  Toolbar.qml
plasmoid/contents/ui/Devices/: DevicesPanel.qml
plasmoid/contents/ui/Network/: ConnectionItem.qml  Header.qml  NetworksPanel.qml
plasmoid/contents/ui/Sound/: AudioControllersDetails.qml  GlobalController.qml  SinkListItem.qml  SoundPanel.qml  VolumeIcon.qml
plugin/: CMakeLists.txt  appearance.cpp  appearance.h  colorsthememodel.cpp  colorsthememodel.h  cursorthememodel.cpp  cursorthememodel.h  iconsmodel.cpp  iconsmodel.h  krdb.cpp  lookandfeelmodel.cpp  lookandfeelmodel.h  plasmathemelistmodel.cpp  plasmathemelistmodel.h  plasmoidplugin.cpp  plasmoidplugin.h  qmldir  widgetstylemodel.cpp  widgetstylemodel.h
plugin/xcursor/: cursortheme.cpp
translations/: CMakeLists.txt  TRANSLATORS.README  es_ES.po  extract-and-merge-messages.sh  plasma-widget-quick-controls.pot
